import pygame
from typing import List, Tuple

class Snake:
    def __init__(self):
        self.length: int = 1
        self.speed: int = 1
        self.body: List[Tuple[int, int]] = [(0, 0)]

    def move(self):
        # Move the snake logic here
        pass

    def eat_food(self):
        # Eat food logic here
        pass

    def check_collision(self):
        # Check collision logic here
        pass

class Game:
    def __init__(self):
        self.score: int = 0
        self.high_score: int = 0
        self.snake: Snake = Snake()

    def start_game(self):
        pygame.init()
        # Start the game logic here
        pass

    def end_game(self):
        pygame.quit()
        # End the game logic here
        pass

    def pause_game(self):
        # Pause the game logic here
        pass

    def resume_game(self):
        # Resume the game logic here
        pass

    def update_score(self):
        # Update the score logic here
        pass

    def update(self):
        # Update the game logic here
        pass

    def draw(self):
        # Draw the game graphics here
        pass

class Food:
    def __init__(self):
        self.x: int = 0
        self.y: int = 0

    def generate(self):
        # Generate food logic here
        pass

class Level:
    def __init__(self):
        self.difficulty: int = 1

    def set_difficulty(self):
        # Set difficulty logic here
        pass
